feat: supported sticky header for multiline table (#746)
* feat: supported sticky header for multiline table

* feat: repeating styles are moved to mixin

--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -30,32 +30,47 @@
     }
 }
 
+@mixin yfm-sticky-header-row {
+    position: sticky;
+    top: 0;
+    z-index: 2;
+
+    td,
+    th {
+        position: relative;
+        z-index: 0;
+    }
+
+    td::before,
+    th::before {
+        content: '';
+        background: var(--yfm-color-base);
+        position: absolute;
+        inset: 0;
+        z-index: -2;
+    }
+
+    td::after,
+    th::after {
+        content: '';
+        background: var(--yfm-color-table-row-background);
+        position: absolute;
+        inset: 0;
+        z-index: -1;
+    }
+}
+
 .yfm table[sticky-header] {
     position: relative;
 
     thead {
-        position: sticky;
-        top: 0;
+        @include yfm-sticky-header-row;
+    }
 
-        & th {
-            position: relative;
-            z-index: 0;
-        }
-
-        & th::before {
-            content: '';
-            background: var(--yfm-color-base);
-            position: absolute;
-            inset: 0;
-            z-index: -2;
-        }
-
-        & th::after {
-            content: '';
-            background: var(--yfm-color-table-row-background);
-            position: absolute;
-            inset: 0;
-            z-index: -1;
+    &:not(:has(thead)) {
+        tbody > tr:first-child,
+        > tr:first-child {
+            @include yfm-sticky-header-row;
         }
     }
 
