fix: set max-height: none for .yfm mermaid svg

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -113,6 +113,10 @@
         }
     }
 
+    .mermaid svg[id*='mermaid'] {
+        max-height: none;
+    }
+
     img {
         object-fit: contain;
         background-color: var(--yfm-color-base);
