--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,4 +1,4 @@
-@import 'common';
-@import 'anchor';
-@import 'highlight';
-@import 'code';
+@use 'common';
+@use 'anchor';
+@use 'highlight';
+@use 'code';
