--- a/src/scss/print.scss
+++ b/src/scss/print.scss
@@ -1,8 +1,8 @@
-@import 'print/code';
-@import 'print/common';
-@import 'print/cut';
-@import 'print/note';
-@import 'print/table';
-@import 'print/tabs';
-@import 'print/term';
-@import 'print/iframe';
+@use 'print/code';
+@use 'print/common';
+@use 'print/cut';
+@use 'print/note';
+@use 'print/table';
+@use 'print/tabs';
+@use 'print/term';
+@use 'print/iframe';
