--- a/src/scss/_note.scss
+++ b/src/scss/_note.scss
@@ -1,3 +1,5 @@
+@use 'sass:color';
+
 .yfm .yfm-note {
     max-width: 1296px;
     margin: 20px 0;
@@ -40,9 +42,9 @@
 
     @each $type, $color in $colors {
         &.#{$type} > :first-child::before {
-            $r: red($color);
-            $g: green($color);
-            $b: blue($color);
+            $r: color.channel($color, 'red', $space: rgb);
+            $g: color.channel($color, 'green', $space: rgb);
+            $b: color.channel($color, 'blue', $space: rgb);
             $rgbColor: 'rgb(' + $r + ',' + $g + ',' + $b + ')';
             content: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 16 16"%3E%3Ccircle cx="8" cy="8" r="8" fill="' + $rgbColor + '"/%3E%3Crect width="1" height="5" x="7.5" y="6.5" stroke="%23fff" rx=".5"/%3E%3Ccircle cx="8" cy="4" r="1" fill="%23fff"/%3E%3C/svg%3E');
         }
