fix: remove italic from dl

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -25,12 +25,10 @@
     color: var(--yfm-color-text);
     tab-size: var(--yfm-tab-size, inherit);
 
-    --yfm-font-family-monospace:
-        'Menlo', 'Monaco', 'Consolas', 'Ubuntu Mono', 'Liberation Mono', 'DejaVu Sans Mono',
-        'Courier New', 'Courier', monospace;
-    --yfm-font-family-sans:
-        'Segoe UI', arial, helvetica, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol';
+    --yfm-font-family-monospace: 'Menlo', 'Monaco', 'Consolas', 'Ubuntu Mono', 'Liberation Mono',
+        'DejaVu Sans Mono', 'Courier New', 'Courier', monospace;
+    --yfm-font-family-sans: 'Segoe UI', arial, helvetica, sans-serif, 'Apple Color Emoji',
+        'Segoe UI Emoji', 'Segoe UI Symbol';
 
     * {
         box-sizing: border-box;
@@ -286,7 +284,6 @@
             margin-bottom: 5px;
             font-size: 1em;
             font-weight: 500;
-            font-style: italic;
         }
 
         dd {
