feat: del brand color for use diplodoc/themes in other proejcts

--- a/src/scss/_anchor.scss
+++ b/src/scss/_anchor.scss
@@ -8,14 +8,14 @@
         .yfm-clipboard-anchor {
             //reset default button style
             background: none;
-            color: var(--yfm-color-link);
+            color: var(--yfm-color-link, var(--yfm-color-link-private));
             border: none;
             padding: 0;
             font: inherit;
             cursor: pointer;
 
             &:hover {
-                color: var(--yfm-color-link-hover);
+                color: var(--yfm-color-link-hover, var(--yfm-color-link-hover-private));
             }
         }
 
