--- a/src/scss/yfm.scss
+++ b/src/scss/yfm.scss
@@ -2,6 +2,6 @@
 @use 'yfm-only';
 @use 'modal';
 
-@forward '@diplodoc/cut-extension/runtime';
-@forward '@diplodoc/file-extension/runtime';
-@forward '@diplodoc/tabs-extension/runtime';
+@import '@diplodoc/cut-extension/runtime/styles.css';
+@import '@diplodoc/file-extension/runtime/styles.css';
+@import '@diplodoc/tabs-extension/runtime/styles.css';
