--- a/src/scss/_inline-code.scss
+++ b/src/scss/_inline-code.scss
@@ -7,7 +7,10 @@
 
     padding: 10px;
 
-    background-color: var(--yfm-color-term-dfn-background);
+    background-color: var(
+        --yfm-color-term-dfn-background,
+        var(--yfm-color-term-dfn-background-private)
+    );
 
     font-size: inherit;
     line-height: inherit;
@@ -15,7 +18,8 @@
 
     border-radius: 4px;
 
-    box-shadow: 0 8px 20px var(--yfm-color-term-dfn-shadow);
+    box-shadow: 0 8px 20px
+        var(--yfm-color-term-dfn-shadow, var(--yfm-color-term-dfn-shadow-private));
     outline: none;
     width: fit-content;
 
@@ -34,7 +38,11 @@
         inset: 0;
 
         border-radius: inherit;
-        box-shadow: 0 0 0 1px var(--yfm-color-term-dfn-pseudo-shadow);
+        box-shadow: 0 0 0 1px
+            var(
+                --yfm-color-term-dfn-pseudo-shadow,
+                var(--yfm-color-term-dfn-presudo-shadow-private)
+            );
     }
 
     &.open {
