feat: add yfm-base.scss file for correct theme using via css-tokens

--- a/src/scss/yfm.scss
+++ b/src/scss/yfm.scss
@@ -1,6 +1,4 @@
-@use 'base';
-@use 'yfm-only';
-@use 'modal';
+@use 'yfm-base';
 
 @import '@diplodoc/cut-extension/runtime/styles.css';
 @import '@diplodoc/file-extension/runtime/styles.css';
