fix: change font bold for list definition

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -286,7 +286,7 @@
         dt {
             margin-bottom: 5px;
             font-size: 1em;
-            font-weight: 500;
+            font-weight: bold;
         }
 
         dd {
