--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -44,7 +44,7 @@
     td::before,
     th::before {
         content: '';
-        background: var(--yfm-color-base, var(--yfm-color-base-private));
+        background: var(--yfm-color-table-background, var(--yfm-color-table-background-private));
         position: absolute;
         inset: 0;
         z-index: -2;
@@ -54,8 +54,8 @@
     th::after {
         content: '';
         background: var(
-            --yfm-color-table-row-background,
-            var(--yfm-color-table-row-background-private)
+            --yfm-color-table-head-background,
+            var(--yfm-color-table-head-background-private)
         );
         position: absolute;
         inset: 0;
