--- a/src/scss/_inline-code.scss
+++ b/src/scss/_inline-code.scss
@@ -39,10 +39,7 @@
 
         border-radius: inherit;
         box-shadow: 0 0 0 1px
-            var(
-                --yfm-color-term-dfn-pseudo-shadow,
-                var(--yfm-color-term-dfn-presudo-shadow-private)
-            );
+            var(--yfm-color-term-dfn-pseudo-shadow, var(--yfm-color-term-dfn-pseudo-shadow-private));
     }
 
     &.open {
