feat: delete brand color for use diplodoc/themes in other proejcts (#772)
* feat: del brand color for use diplodoc/themes in other proejcts

* feat: add yfm-base.scss file for correct theme using via css-tokens

* fix: revert forward for extensions

* feat: add table private colors

* feat: fix typo in name

--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -44,7 +44,7 @@
     td::before,
     th::before {
         content: '';
-        background: var(--yfm-color-table-background);
+        background: var(--yfm-color-table-background, var(--yfm-color-table-background-private));
         position: absolute;
         inset: 0;
         z-index: -2;
@@ -53,7 +53,10 @@
     td::after,
     th::after {
         content: '';
-        background: var(--yfm-color-table-head-background);
+        background: var(
+            --yfm-color-table-head-background,
+            var(--yfm-color-table-head-background-private)
+        );
         position: absolute;
         inset: 0;
         z-index: -1;
