--- a/src/scss/_note.scss
+++ b/src/scss/_note.scss
@@ -51,17 +51,19 @@
     }
 
     $backgroundColors: (
-        yfm-accent-info:
-            var(--yfm-color-note-info-background, var(--yfm-color-note-info-background-private)),
-        yfm-accent-tip:
-            var(--yfm-color-note-tip-background, var(--yfm-color-note-tip-background-private)),
-        yfm-accent-alert:
-            var(
+        yfm-accent-info: var(
+                --yfm-color-note-info-background,
+                var(--yfm-color-note-info-background-private)
+            ),
+        yfm-accent-tip: var(
+                --yfm-color-note-tip-background,
+                var(--yfm-color-note-tip-background-private)
+            ),
+        yfm-accent-alert: var(
                 --yfm-color-note-important-background,
                 var(--yfm-color-note-important-background-private)
             ),
-        yfm-accent-warning:
-            var(
+        yfm-accent-warning: var(
                 --yfm-color-note-warning-background,
                 var(--yfm-color-note-warning-background-private)
             ),
