--- a/src/scss/print/common.scss
+++ b/src/scss/print/common.scss
@@ -4,7 +4,8 @@
             display: none;
         }
 
-        h1, h2 {
+        h1,
+        h2 {
             &[data-original-article] {
                 page-break-before: always;
             }
